# lam-backend

./: .dockerignore  .env  .env.dev  .env.local  .gitignore  API_MANUAL.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  run_server.py  vercel.json
.github/workflows/: deploy.yml
app/: config.py  main.py
app/api/: dependencies.py
app/api/v1/: api.py
app/api/v1/endpoints/: brands.py  categories.py  products.py
app/core/: exceptions.py  middleware.py
app/core/servers/: __init__.py
app/core/servers/gunicorn/: __init__.py  app_options.py  application.py  run.py
app/core/servers/uvicorn/: run.py
app/database/: __init__.py  connection.py  models.py
app/migrations/: env.py
app/migrations/versions/: 2025_09_05_1127-0ee3bdd330b7_initial_migration_for_sqlite.py  2025_09_28_1541-19c4a10af4ce_fix_product_make_fields_other_than_.py
app/repositories/: __init__.py  base.py  brand.py  category.py  product.py  tag.py
app/schemas/: __init__.py  brand.py  category.py  common.py  product.py
app/services/: __init__.py  base.py  brand_service.py  category_service.py  product_service.py
docker/: docker-compose.dev.yml  docker-compose.local.yml
docker/images/: dev.Dockerfile  local.Dockerfile
docker/scripts/: dev.sh  local.sh
migrations/: env.py
migrations/versions/: 0bae1014b5aa_initial_migration.py  41a606d7ad99_initial_migration.py  7004b488ea6f_make_shop_id_nullable.py
tests/: test_api.py  test_db.py  test_repositories.py  test_services.py
