[tool.poetry]
name = "e-commerce-api"
version = "0.1.0"
description = ""
authors = ["hakucodes <hamidaxtamov1@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[project]
name = "e-commerce-api"
version = "0.1.0"
description = ""
authors = [
    {name = "hakucodes",email = "hamidaxtamov1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "sqlalchemy[asyncio] (>=2.0.43,<3.0.0)",
    "psycopg2-binary (>=2.9.9,<3.0.0)",
    "structlog (>=25.4.0,<26.0.0)",
    "pyjwt[crypto] (>=2.10.1,<3.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "python-slugify (>=8.0.4,<9.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
coverage = "^7.10.2"
factory-boy = "^3.3.3"
pre-commit = "^4.2.0"
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
ruff = "^0.12.7"
uvicorn = "^0.34.0"